--- a/config.json
+++ b/config.json
@@ -1,3 +1,4 @@
 {
-    "token": "ODAwNDQ4NTU2MzkyNTEzNTU4.YASRzw.H3YSaVyKhT781q9fSx0Dgfhmc1E"
+    "token": "ODAwNDQ4NTU2MzkyNTEzNTU4.YASRzw.H3YSaVyKhT781q9fSx0Dgfhmc1E", 
+    "prefix": "b!"
 }
